Added extra excitement :sparkles:

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,7 +24,7 @@
 <body>
   <% name = "Steve" %>
   <h1>Welcome to my awesome page!</h1>
-  <p><strong>Hello</strong>,<%= name %></p>
+  <p><strong>Hello</strong>,<%= name %>!!!!!!!!!!!</p>
   <p><%= Time.now %></p>
   <p>Another paragraph</p>
   <form action="/" method="POST">
